# DwarvenThemer4GTK

./: MANIFEST.in  README.md  pyproject.toml
.github/: FUNDING.yml
dwarventhemer4gtk/: __init__.py  __main__.py  app.py  config.py  constants.py  cursor.py  downconvert.py  icon_names.py  theme_detect.py  theme_find.py  ui_helpers.py  window.py
dwarventhemer4gtk/reset_theme_data/themes/DwarvenReset/gtk-4.0/: gtk.css
